# semantic-tension-language

./: .gitattributes  .gitignore  README.md  STL-for-AI.md
.claude/: CLAUDE.md
docs/: AI_Security_CaseStudy_Autonomous_Decryption_Protocol.md  COMPLETION_REPORT_TOOLING_P1.md  COMPLETION_REPORT_TOOLING_P2.md  IMPLEMENTATION_PLAN_TOOLING_P1.md  PROJECT_INDEX.md  STL_AS_LLM_PROGRAM_BRIDGE.md  STL_TOOLING_FEATURES.md  STL_vs_JSON_The_Cognitive_Leap.md  TOOLING_ISSUES_FROM_REAL_USAGE.md
docs/getting-started/: key-concepts.md
docs/protocols/: STL_Ingest_Methodology.md  STL_Operational_Protocol.md
docs/reference/: anchor-types.md  stl-syntax.md
docs/schemas/: _template.stl.schema  causal.stl.schema  historical.stl.schema  legal.stl.schema  medical.stl.schema  scientific.stl.schema  tcm.stl.schema
docs/stlc/: stl_builder_v1.0.0.stlc.md  stl_cli_ext_v1.0.0.stlc.md  stl_cli_query_v1.0.0.stlc.md  stl_decay_v1.0.0.stlc.md  stl_diff_v1.0.0.stlc.md  stl_emitter_v1.0.0.stlc.md  stl_llm_v1.0.0.stlc.md  stl_query_v1.0.0.stlc.md  stl_reader_v1.0.0.stlc.md  stl_schema_v1.0.0.stlc.md
parser/: .gitignore  CONTRIBUTING.md  PROJECT_SETUP_COMPLETE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
parser/.github/workflows/: ci.yml
parser/stl_parser/: __init__.py  _utils.py  analyzer.py  builder.py  cli.py  decay.py  diff.py  emitter.py  errors.py  grammar.py  graph.py  llm.py  models.py  parser.py  query.py  reader.py  schema.py  serializer.py  validator.py
parser/tests/: test_analyzer.py  test_auto_extraction.py  test_builder.py  test_cli.py  test_cli_query.py  test_decay.py  test_diff.py  test_emitter.py  test_empty.py  test_graph.py  test_llm.py  test_multiline_merge.py  test_parser.py  test_query.py  test_reader.py  test_schema.py  test_serializer.py  test_utils.py  test_validator.py
research/token-efficiency/: 01_stl_vs_json.py  02_quote_removal.py  03_default_omission.py  README.md  results_2026-05-13.txt
spec/: STLC_COMPILER_INTERFACE_PROTOCOL.md  stl-core-spec-v1.0-supplement.md  stl-core-spec-v1.0.md
